# trumman_bldc_driver_ros

./: CMakeLists.txt  README.md  package.xml  test.cpp
include/motor_driver/: EVmotor.h  modbus.h
src/: motor_driver.cpp
